Samples update after 8249879. Added opengl sample
Reviewed-by: mcimadamore